# learn-autoML

./: .gitignore  01_foundations.md  02_pipeline_components.md  03_hyperparameter_optimization.md  04_frameworks_comparison.md  05_implementation_example.md  README.md  pyproject.toml  run_experiments.py
.claude/skills/: automl_agent.md
notebooks/: 01_eda.py  02_results.py
