[project]
name = "automl-uni"
version = "0.1.0"
description = "AutoML university project — Iris & Wine experiments"
requires-python = ">=3.10"

dependencies = [
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "optuna>=3.3.0",
    "tpot>=0.12.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
pycaret = ["pycaret[full]>=3.0.0"]
autosklearn = ["auto-sklearn>=0.15.0"]  # Linux/macOS only, requires swig
viz = ["plotly>=5.0.0", "kaleido>=0.2.1"]

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.0.0",
    "jupyter>=1.0.0",
]
