[project]
name = "automl-uni"
version = "0.1.0"
description = "AutoML university project — Iris & Wine experiments"
requires-python = ">=3.13"

dependencies = [
    "scikit-learn>=1.5.0",
    "pandas>=2.1.0",
    "numpy>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "optuna>=3.3.0",
    "joblib>=1.3.0",
    "marimo>=0.10.0",
]

[project.optional-dependencies]
viz = ["plotly>=5.0.0", "kaleido>=0.2.1"]
# tpot and pycaret do not yet support Python 3.13 + numpy 2.0
